# edge1-management-interface

./: .gitattributes  .gitignore  AGENTS.md  AUTONOMOUS_ENGINEERING_AUTHORIZATION.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  requirements-registry.txt  s dashboard view"
.agent/: README.md
.github/: pull_request_template.md
config/: bigbird-edge1-connector.json  edge1-operations-allowlist.json
deploy/: README.md  bigbird-edge1-connector-maintenance.service  bigbird-edge1-connector-maintenance.timer  bigbird-edge1-connector-restart.timer  bigbird-edge1-connector.service  configure-electrum-watch-api.sh  configure-electrum-watch-rpc.sh  create-search-route-htpasswd.sh  edge1-operations-api.service  electrum-watch-service-smoke-test.sh  install-bitcoin-wallet-status.sh  install-edge1-operations-api.sh  install-electrum-watch-service.sh  install-numbering-node.sh  install-private-library-search-route.sh  (+10 more)
services/wwcx-messaging-gateway/: .env.example  Containerfile  README.md  compose.test.yaml  pyproject.toml
services/wwcx-messaging-gateway/app/: __init__.py  compliance.py  main.py  models.py  persistence.py  providers.py  store.py  telegraph_office.py
services/wwcx-messaging-gateway/docs/: activation-checklist.md  architecture.md  bigbird-integration.md  rollback.md  testing-and-setup.md
services/wwcx-messaging-gateway/migrations/: 0001_initial.sql  0002_control_state.sql
services/wwcx-messaging-gateway/scripts/: smoke-test.sh
services/wwcx-messaging-gateway/tests/: test_compliance.py  test_gateway.py
(+715 files in other folders)
