[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wwcx-messaging-gateway"
version = "0.2.0"
description = "Provider-neutral SMS/MMS gateway for WW.CX"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.10,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
